--- a/2021/nnpkgs/index.Rmd
+++ b/2021/nnpkgs/index.Rmd
@@ -2,7 +2,7 @@
 title: "Neural Network Packages in R"
 subtitle: "Wiesbaden UseR Coffee Break" # e.g. the occasion
 author: "Lukas Burk" # For the title slide
-slides: "https://jemus42.github.io/talks/2021/nnpkgs/"
+slides: "http://slides.lukasburk.de/2021/nnpkgs"
 contactauthor: "Lukas Burk" # For the last slide
 contactemail: "burk@leibniz-bips.de" # For the last slide
 date: "2021-06-30" # Automatically evaluates to today
@@ -43,13 +43,13 @@ xaringanExtra::use_extra_styles(
 
 class: middle
 
-## Hi 👋
+## Hi, I'm Lukas 👋
 
-- Lukas, fresh PhD student @ BIPS Bremen & LMU München (Since April '21) 
+- Fresh PhD student @ BIPS Bremen & LMU München (Since April '21) 
 
 --
 
-- Context: Something something biostatistics / {M,D}L / Data Science
+- Context: Biostatistics / {M,D}L / Data Science
 
 --
 
@@ -70,7 +70,7 @@ class: inverse, middle
 
 - `{nnet}`: The grandpa of neural networks in R.
 
-    - Mostly historically relevant, less useful for state of the art tasks
+    - Mostly historically relevant, less useful for modern tasks
     - Limited to single-layer neural networks ("90s neural nets") 
     
 --
@@ -107,14 +107,15 @@ head(penguins)
 ---
 ## Penguin Preparation
 
-- Common 80/20 train-test-split
-- Scaling, to be nice to our gradients 🤗
+- 80/20 train-test-split
+
+- Scaling for more manageable gradients
 
 ```{r peng-traintestsplit}
-penguins_train <- penguins[1:276, ]  # ~80%
+penguins_train <- penguins[1:276, ]  # ~80% #<<
 penguins_test <- penguins[277:344, ] # ~20%
 
-penguins_train <- penguins_train %>% mutate(across(where(is.numeric), scale))
+penguins_train <- penguins_train %>% mutate(across(where(is.numeric), scale)) #<<
 penguins_test <- penguins_test %>% mutate(across(where(is.numeric), scale))
 ```
 
@@ -122,56 +123,35 @@ penguins_test <- penguins_test %>% mutate(across(where(is.numeric), scale))
 ## Model Fit with `nnet`
 
 - Familiar formula interface 👌 
-- No manual re-encoding of `factor` variable needed 👍
+- Automatic handling of `factor` variables 👍
+- Similar to `lm()` and friends
 
 ```{r nnet-class-fit, message=FALSE}
 library(nnet)
 mod_nnet <- nnet(
-  island ~ bill_length_mm + bill_depth_mm + flipper_length_mm + body_mass_g, 
+  island ~ bill_length_mm + bill_depth_mm + flipper_length_mm + body_mass_g, #<<
   data = penguins_train,
-  size = 10 # Units in the hidden layer
+  size = 10,    # Units in the hidden layer #<<
+  trace = FALSE # Shut up about it
 )
 ```
 
----
-## Prediction with `nnet`
 
-- Same familiar `predict` function
+
+---
+## Predictions with `nnet`
+
+- No surprises here
 
 ```{r nnet-class-pred}
-pred_data <- penguins_test %>% select(island, bill_length_mm:body_mass_g)
-
-island_pred <- predict(
-  mod_nnet,
-  newdata = select(pred_data, bill_length_mm:body_mass_g),
-  type = "class"
+island_pred <- predict( #<<
+  mod_nnet, 
+  type = "class", #<<
+  newdata = select(penguins_test, bill_length_mm:body_mass_g)
 )
 
 # Individual class predictions
 island_pred[1:5]
-```
-
----
-## Evaluating `nnet` Models (1)
-
-- Add our predictions to the original data for a glance
-
-```{r nnet-class-eval}
-pred_data %>%
-  mutate(
-    island_pred = island_pred, .before = island,
-  ) %>%
-  head(8)
-```
-
----
-## Evaluating `nnet` Models (2)
-
-- Manual accuracy calculation
-- Nicer infrastructure might be available elsewhere?
-
-```{r nnet-class-acc}
-sum(pred_data$island == island_pred) / length(island_pred)
 ```
 
 
@@ -182,14 +162,17 @@ class: inverse, middle
 ---
 ## Example Task: MNIST
 
-- MNIST handwritten image classification
-- The "Hello World" of deep learning, apparently
+- Handwritten image recognition
+
+- The "Hello World" of deep learning
+
 - 3D arrays of 60k images, 28x28 greyscale matrices (0-255)
 
 --
 
 ```{r keras-load-mnist}
 library(keras)
+
 mnist <- dataset_mnist()
 str(mnist)
 ```
@@ -209,7 +192,7 @@ plot(as.raster(digit, max = 255))
 ]
 
 .pull-right[
-```{r, echo=FALSE}
+```{r mnist-digit, echo=FALSE}
 plot(as.raster(digit, max = 255))
 ```
 
@@ -218,16 +201,16 @@ plot(as.raster(digit, max = 255))
 ---
 ## Preprocessing with `keras` (1)
 
-- Unpacking data from nested list via `%<-%` (`{zeallot}`)
-- Reshaping via `keras::array_reshape` (it's a long story)
-- Images are matrices with 28x28 = 784 columns
+- Reshaping via `keras::array_reshape()`
+
+- Images are a matrix with 28x28 = **784 colums**, one row per image
 
 --
 
 ```{r keras-preprocess-1}
 c(c(train_images, train_labels), c(test_images, test_labels)) %<-% mnist
 
-train_images <- array_reshape(train_images, c(60000, 28 * 28))
+train_images <- array_reshape(train_images, c(60000, 28 * 28)) #<<
 test_images <- array_reshape(test_images, c(10000, 28 * 28))
 ```
 
@@ -235,18 +218,20 @@ test_images <- array_reshape(test_images, c(10000, 28 * 28))
 ## Preprocessing with `keras` (2)
 
 - Scale images to 0-1
+
 - Encode labels to categorical shapes (`keras::to_categorical`)
-- Shuffle training data for good measure
 
---
 
-```{r keras-preprpcess-2}
-train_images <- train_images / 255
+```{r keras-preprpcess-2, dependson=c(-1)}
+train_images <- train_images / 255 #<<
 test_images <- test_images / 255
 
 train_labels <- to_categorical(train_labels) #<<
-test_labels <- to_categorical(test_labels)   #<<
+test_labels <- to_categorical(test_labels)
+```
 
+
+```{r keras-preprpcess-3, include=FALSE, dependson=c(-1)}
 obs <- nrow(train_images)
 set.seed(123)
 randomize <- sample(seq_len(obs), size = obs, replace = FALSE)
@@ -257,43 +242,42 @@ train_labels <- train_labels[randomize, ]
 ---
 ## Build a Model in `keras`
 
-- Define model either sequentially or with the functional API
 - `keras_model_sequential` is the easiest way to get started
+
 - `layer_dense` also defines activation function
-- Note: No spaces in the `name` or you'll get unhelpful errors 🙃
 
-```{r keras-build-compile-1}
-# Number of input features
-n_feat <- ncol(train_images)
 
-# Define model architecture sequentially
+```{r keras-build-compile-1, dependson=c(-1)}
 model <- keras_model_sequential(name = "MNIST-MLP") %>%
-  layer_dense(units = 128, activation = "relu", input_shape = n_feat) %>%
-  layer_dense(units = 64, activation = "relu") %>%
-  layer_dense(units = 10, activation = "softmax", name = "Output")
+  layer_dense(units = 64, activation = "relu", input_shape = 784) %>% #<<
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 32, activation = "relu") %>%
+  layer_dropout(rate = 0.2) %>%
+  layer_dense(units = 10, activation = "softmax", name = "Output") #<<
 ```
 
+.footnote[Note: No spaces in the `name` or you'll get unhelpful errors 🙃]
+
 ---
-## Compile a `keras`  Model
+## `compile()` a `keras`  Model
 
 - Defines loss function, optimizer (with parameters), and other metrics
+
 - Use either `"adam"` *or* `optimizer_adam(...)` and set parameters
 
---
 
-```{r keras-build-compile-2}
-# Compile: Loss, optimizer, metrics
+```{r keras-build-compile-2, dependson='keras-build-compile-1'}
 model %>% compile(
-  loss = "categorical_crossentropy",
-  optimizer = "adam",
-  metrics = "accuracy"
+  loss = "categorical_crossentropy", #<<
+  optimizer = "adam",                #<<
+  metrics = "accuracy" # Optional
 )
 ```
 
 ---
 ## Take a Look at a `keras` Model
 
-```{r keras-build-summary}
+```{r keras-build-summary, dependson='keras-build-compile-2'}
 summary(model)
 ```
 
@@ -301,43 +285,41 @@ summary(model)
 ## Fit a `keras` Model
 
 - Supply training images and labels (distinct, no formula interface)
+
 - Set number of `epochs`, `batch_size`, ...
+
 - Save training `history` for inspection
 
---
 
-```{r keras-fit}
-history <- model %>% fit(
-  x = train_images, y = train_labels,
-  epochs = 5,             # Very short run
-  batch_size = 64,        # Big batches for faster training
-  validation_split = 0.2
-)
+```{r keras-fit, dependson='keras-build-compile-2'}
+history <- model %>% 
+  fit( #<<
+    x = train_images, y = train_labels, #<<
+    epochs = 3,             # Very short run #<<
+    batch_size = 128,        # Big batches for faster training
+    validation_split = 0.2
+  )
 ```
 
 ---
-## Look at the Model Fit
+## Look at the Training History
 
 .pull-left[
 
-Interactively, you'll get a live-updating plot 😎
+- Interactively, you'll get a live-updating plot 😎
+
+- `history` can has a helpful `plot` method for `{ggplot2}`
 
 ```{r keras-view-history1, eval=FALSE}
-plot(history) +
-  geom_path() +
-  theme_minimal() +
-  theme(legend.position = "top")
+plot(history)
 ```
 
 ]
 
 .pull-right[
 
-```{r keras-view-history2, echo=FALSE}
-plot(history) +
-  geom_path() +
-  theme_minimal() +
-  theme(legend.position = "top")
+```{r keras-view-history2, echo=FALSE, out.width='85%'}
+knitr::include_graphics("index_files/figure-html/keras-view-history2-1.png")
 ```
 
 ]
@@ -345,19 +327,38 @@ plot(history) +
 ---
 ## Evaluate a `keras` Model
 
+.pull-left[
+
 - Very simple to get relevant metrics
 
-```{r keras-evaluate}
-model %>% evaluate(test_images, test_labels, verbose = FALSE)
+```{r keras-evaluate, dependson='keras-fit'}
+model %>% 
+  evaluate(
+    test_images, test_labels, 
+    verbose = FALSE
+  )
 ```
+
+]
+
+--
+
+.pull-right[
 
 - Further investigation via e.g. a confusion matrix
 
 ```{r keras-evaluate-confmat, eval=FALSE}
-predictions <- model %>% predict_classes(test_images)
+preds <- model %>% 
+  predict_classes(test_images) #<<
+
 actual <- mnist$test$y
-caret::confusionMatrix(factor(predictions), factor(actual))
+caret::confusionMatrix(
+  factor(preds), 
+  factor(actual)
+)
 ```
+
+]
 
 
 ---
@@ -377,10 +378,10 @@ library(luz)
 - Using a kaggle dataset requires account + phone verification!
 
 ```{r torch-catdog-data, eval=FALSE}
-ds <- torchdatasets::dogs_vs_cats_dataset(
+ds <- torchdatasets::dogs_vs_cats_dataset( #<<
   root = "data",
-  token = "~/.kaggle/kaggle.json",
-  transform = . %>%
+  token = "~/.kaggle/kaggle.json", #<<
+  transform = . %>% #<<
     torchvision::transform_to_tensor() %>%
     torchvision::transform_resize(size = c(224, 224)) %>% 
     torchvision::transform_normalize(rep(0.5, 3), rep(0.5, 3)),
@@ -415,53 +416,63 @@ test_dl <- dataloader(test_ds, batch_size = 64, num_workers = 4)
 .pull-left[
 
 - Network components are called `modules` in `{torch}`
-- Plugging in a pre-trained model is easy(ish), where we disable gradients
+
+- Plugging in a pre-trained model is easy(ish)
+
 - Sequential layers similar to `keras` are a `luz` bonus 😎
 
 ]
 
+--
+
 .pull-right[
 
+.code70[
+
 ```{r torch-model, eval=FALSE}
-net <- nn_module(
-  initialize = function(output_size) {
+net <- nn_module( #<<
+  initialize = function(output_size) { #<<
     self$model <- model_alexnet(pretrained = TRUE)
-    
     for (par in self$parameters) par$requires_grad_(FALSE)
     
-    self$model$classifier <- nn_sequential(
+    self$model$classifier <- nn_sequential( #<<
       nn_dropout(0.5),
-      nn_linear(9216, 512),
-      nn_relu(),
+      nn_linear(9216, 512), #<<
+      nn_relu(),            #<<
       nn_linear(512, 256),
       nn_relu(),
       nn_linear(256, output_size)
     )
   },
-  forward = function(x) {
+  forward = function(x) { #<<
     self$model(x)[,1]
   }
 )
 ```
 
 ]
+]
 
 ---
 ## Train `torch` Model with `luz`
 
 - `luz::setup` is similar to `keras::compile`
-- Both packages have a nice `fit` function
+
+- Both packages have a nice `fit` method
 
 ```{r torch-train, eval=FALSE}
 fitted <- net %>%
-  setup(
+  setup( #<<
     loss = nn_bce_with_logits_loss(), #<<
     optimizer = optim_adam,           #<<
     metrics = list(luz_metric_binary_accuracy_with_logits())
   ) %>%
   set_hparams(output_size = 1) %>% # param for initialize method
   set_opt_hparams(lr = 0.01) %>% # params for optimizer (adam)
-  fit(train_dl, epochs = 3, valid_data = valid_dl) #<<
+  fit( #<<
+    data = train_dl, valid_data = valid_dl #<<
+    epochs = 3
+  )
 ```
 
 
@@ -474,18 +485,18 @@ luz_save(fitted, "dogs-and-cats.pt")
 ## Predicting with `torch`
 
 - `predict` works as usual
-- Sigmoid-transformation required to get probabilities
+
+- Explicit sigmoid-transformation required to get class-probabilities
 
 ```{r luz-load, include=FALSE, eval=FALSE}
-fitted <- luz_load("dogs-and-cats.pt")
+fitted <- luz_load(here::here("dogs-and-cats.pt"))
 ```
 
 
 ```{r torch-predict, eval=FALSE}
 preds <- predict(fitted, test_dl)
 
-probs <- torch_sigmoid(preds)
-print(probs, n = 5)
+probs <- torch_sigmoid(preds) #<<
 ```
 
 
@@ -519,9 +530,6 @@ class: middle
 --
 
     - No Python dependency, less (or less painful) headaches 🙏🏻 
-
---
-
     - More assembly required than with `{keras}`, can be a good or a bad thing
 
 
@@ -532,11 +540,13 @@ class: middle
 
 - `{keras}` example: https://tensorflow.rstudio.com/guide/keras/examples/mnist_mlp/
 
-    - All things `{keras}` at https://keras.rstudio.com/ (Documentation may lag behind Pythin version 😕)
+    - All things `{keras}` at https://keras.rstudio.com/  
+    (Documentation may lag behind Python version 😕)
 
 - `{luz}` example: https://blogs.rstudio.com/ai/posts/2021-06-17-luz/
 
-    - All things `{torch}` at https://mlverse.github.io/ (Very much in movement!)
+    - All things `{torch}` at https://mlverse.github.io/  
+    (Very much in active development!)
 
 ---
 class: center, middle, thanks
