--- a/2021/mlr3torch/index.Rmd
+++ b/2021/mlr3torch/index.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "{mlr3torch}"
+title: "{mlr3torch}: First Look"
 subtitle: "Let's see how this goes" # e.g. the occasion
 author: "Lukas Burk" # For the title slide
-date: "2021-07-02" # Automatically evaluates to today
+date: "2021-09-14" # Automatically evaluates to today
 output:
   xaringan::moon_reader:
     # css: [bips.css, default]
@@ -23,6 +23,7 @@ editor_options:
 knitr::opts_chunk$set(
   echo = FALSE,
   warning = FALSE,
+  message = FALSE,
   dev = "ragg_png",
   dev.args = list(background = "transparent"),
   fig.align = "center",
@@ -60,7 +61,6 @@ xaringanExtra::use_xaringan_extra(
   c("tile_view", "panelset")
 )
 
-
 theme_local <- function(...) {
   theme_xaringan() +
   theme(
@@ -74,10 +74,131 @@ theme_local <- function(...) {
     ...
   )
 }
+
+library(mlr3)
+library(mlr3tuning)
+library(ggplot2)
+library(dplyr)
+library(kableExtra)
 ```
 
-# Hello World
+## First Impressions
 
-Testing
+- Basic idea: Do what {mlr3keras} does, but s/keras/torch/
 
-# Okay then
+--
+
+### Pros
+
+- {torch} is purely based on R and C++
+- Heavy lifting is done by `libtorch` in C++ (currently v1.9)
+- $\Rightarrow$ No Python dependency, no reticulate mess with conda/venvs
+
+### Cons
+
+- Still very early for {torch} (currently 0.5.0)
+- Concerns about performance (will get better, but probably not equal PyTorch)
+
+---
+
+## {mlr3torch}
+
+- Current minimal working example at `jemus42/mlr3torch` (private as of now)
+
+--
+
+- Inside the tin:
+    - `LearnerRegrTorchTabnet` + `LearnerClassifTorchTabnet`
+    - Wrapping *TabNet* learner from {tabnet} package (`mlverse/tabnet`)
+    - $\rightarrow$ simple fitting fun (`tabnet_fit`), hyperparams as simple arguments
+    
+- Motivation:
+    1. Easier to wrap than custom {torch} model building architecture
+    2. Allows comparison to similar wrapper in {mlr3keras} for TensorFlow version
+    
+---
+
+## TabNet in `{mlr3torch}` & `{mlr3keras}`
+
+No extensive comparison so far, purely a proof-of-concept.
+
+- Compared (aggregate) time to
+    1. Instantiate learner
+    2. Train on `german_credit` classif. task for 10 epochs
+    3. Calculate training accuarcy (to ensure reasonably similar results)
+- Attempted to set relevant hyperparams to same values (implementation details may vary)
+
+```{r keras-tabnet-bench, fig.width = 12, fig.height = 3}
+library(ggplot2)
+#library(mlr3viz)
+library(microbenchmark)
+benchres <- readRDS(here::here("2021/mlr3torch/benchres_german-credit.rds"))
+
+autoplot(benchres) +
+  scale_y_continuous(breaks = 1:10, name = "Time [seconds]") +
+  theme_minimal(base_size = 16)
+```
+
+---
+
+## Tuning Experiment
+
+- Simple grid search over `decision_width` ( $n_d$ ) and `num_steps`
+- Search space configuration seems to work fine with
+- Quirk: Authors recommend $n_d = n_a$, which `{tabnet}` achieves by setting either value appropriately if `NULL`
+
+```{r tuning-result, eval = FALSE, include = FALSE}
+tuninginst <- readRDS(here::here("2021/mlr3torch/tuning-result.rds"))
+
+as.data.table(tuninginst$archive)[, c("x_domain_regr.torch.tabnet.decision_width", "x_domain_regr.torch.tabnet.num_steps", "regr.rmse")] %>%
+  as_tibble() %>%
+  setNames(c("n_d", "num_steps", "rmse")) %>%
+  arrange(rmse)
+```
+
+### Caveats
+
+Current limitations in {torch}:
+
+1. CPU: No obvious way to limit CPU threads (?)
+2. GPU: No multi-GPU training (yet, this is WIP apparently)
+3. GPU: Assigning a specific GPU for training may be possible via env vars?
+
+$\Rightarrow$ No (little?) control over hardware utilization may complicate benchmarking?
+
+---
+
+## Elephant in the Room: {torch} vs. PyTorch
+
+Small benchmark from said [mlverse/torch#268](https://github.com/mlverse/torch/issues/268) compares training loop runtime of small MLP for 
+
+1. {torch}
+2. PyTorch imported via {reticulate}
+3. Native PyTorch, called from R
+
+
+```{r pytorch-bench, fig.width = 8, fig.height = 3}
+torchbench <- readRDS(here::here("2021/mlr3torch/results-tiny.rds"))
+
+ggplot(torchbench, aes(x = implementation)) +
+  geom_errorbar(aes(ymin = lq, max = uq), width = .5) +
+  geom_point(aes(y = mean), color = "darkred") +
+  scale_y_continuous(breaks = seq(0, 400, 50), minor_breaks = seq(0, 400, 25)) +
+  coord_flip() +
+  labs(
+    y = "Mean (LQ + UQ) [ns]"
+  ) +
+  theme_minimal(base_size = 16)
+
+ratio <- torchbench[torchbench$implementation == "rtorch", ]$median /
+  torchbench[torchbench$implementation == "native_pytorch", ]$median
+
+```
+
+$\Rightarrow$ Native PyTorch outperforms {torch} by a factor of ~`r round(ratio)`
+
+---
+
+## Outlook
+
+.center[It *could* be really cool at *some point*.]
